--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Frontend</title>
+  <title>GlanceAction</title>
+  <link rel="icon" type="image/png" href="assets/favicon.png">
   <base href="/">
 
   <link rel="stylesheet"
@@ -11,7 +12,6 @@
         crossorigin="anonymous"/>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
 <app-root></app-root>
